--- a/announcement/src/main/resources/application-local.properties
+++ b/announcement/src/main/resources/application-local.properties
@@ -21,7 +21,7 @@ spring.cache.type=redis
 spring.cache.redis.time-to-live=3600
 spring.cache.redis.host=localhost
 spring.cache.redis.port=6379
-spring.redis.database=0
+#spring.redis.database=0
 
 # Spring Security
 spring.security.user.name=root
