--- a/.gitignore
+++ b/.gitignore
@@ -22,3 +22,7 @@
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
 hs_err_pid*
 replay_pid*
+announcement/.DS_Store
+announcement/.DS_Store
+announcement/src/.DS_Store
+announcement/src/main/.DS_Store
