--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -18,6 +18,9 @@ jobs:
         with:
           java-version: '17'
           distribution: 'temurin'
+          
+      - name: Grant execute permission to gradlew
+        run: chmod +x ./gradlew  # gradlew에 실행 권한 부여
 
       - name: Build with Gradle
         run: ./gradlew build --no-daemon  # Gradle을 사용하여 빌드
