--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -39,6 +39,7 @@ jobs:
 
   dispatch:
       runs-on: ubuntu-latest
+      needs: build
       steps:
         - name: Trigger repository dispatch
           uses: peter-evans/repository-dispatch@v1
