--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -1,4 +1,4 @@
-# Current Local Profile Setting
+# Current Prod Profile Setting
 server.servlet.context-path=/
 server.servlet.encoding.charset=UTF-8
 server.servlet.encoding.enabled=true
