--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -11,7 +11,7 @@ spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.properties.hibernate.default_batch_fetch_size=1000
 # DB
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.datasource.url=jdbc:mysql://localhost:3307/disclo
+spring.datasource.url=jdbc:mysql://mysql:3307/disclo
 spring.datasource.username=root
 spring.datasource.password=admin
 ## Redis
