--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -17,7 +17,7 @@ spring.datasource.password=admin
 ## Redis
 spring.cache.type=redis
 spring.cache.redis.time-to-live=3600
-spring.cache.redis.host=localhost
+spring.cache.redis.host=redis
 spring.cache.redis.port=6379
 #spring.redis.database=0
 
